# commune-mcp

./: AGENTS.md  Dockerfile  ERRORS.md  README.md  llms.txt  pyproject.toml  railway.toml  server.json  smithery.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: publish.yml
src/commune_mcp/: __init__.py  __main__.py  server.py  server_http.py
