[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commune-mcp"
version = "0.1.2"
description = "MCP server for Commune – email infrastructure for agents. Set up an inbox and send your first email in 30 seconds. Programmatic inboxes, consistent threads, custom domains, attachments, and structured data."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Commune", email = "hello@commune.sh" }]
keywords = ["mcp", "email", "ai", "agent", "inbox", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
]
dependencies = [
    "mcp>=1.6.0",
    "httpx>=0.25.0",
    "uvicorn>=0.30.0",
    "starlette>=0.40.0",
]

[project.scripts]
commune-mcp = "commune_mcp.server:main"
commune-mcp-http = "commune_mcp.server_http:main"

[project.urls]
Homepage = "https://commune.email"
Documentation = "https://docs.commune.email"
Repository = "https://github.com/shanjai-raj/commune-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/commune_mcp"]
